Error.txt
ERROR in ./src/pages/AnnouncementsPage.jsx
Module build failed (from ./node_modules/babel-loader/lib/index.js):
SyntaxError: C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\src\pages\AnnouncementsPage.jsx: Expected corresponding JSX closing tag for <motion.div>. (527:18)

  525 |                       </div>
  526 |                     )}
> 527 |                   </div>
      |                   ^
  528 |                 </motion.div>
  529 |               );
  530 |             })}
    at constructor (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:367:19)
    at FlowParserMixin.raise (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:6627:19)
    at FlowParserMixin.jsxParseElementAt (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:4757:16)
    at FlowParserMixin.jsxParseElement (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:4779:17)
    at FlowParserMixin.parseExprAtom (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:4789:19)
    at FlowParserMixin.parseExprSubscripts (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:11076:23)
    at FlowParserMixin.parseUpdate (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:11061:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:11041:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10894:61)
    at FlowParserMixin.parseExprOps (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10899:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10876:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10826:21)
    at C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:3528:39
    at FlowParserMixin.tryParse (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:6935:20)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:3528:18)
    at C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10795:39
    at FlowParserMixin.allowInAnd (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:12427:12)
    at FlowParserMixin.parseMaybeAssignAllowIn (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10795:17)
    at FlowParserMixin.parseMaybeAssignAllowInOrVoidPattern (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:12494:17)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:11674:28)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:3621:18)
    at FlowParserMixin.parseExprAtom (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:11326:23)
    at FlowParserMixin.parseExprAtom (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:4794:20)
    at FlowParserMixin.parseExprSubscripts (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:11076:23)
    at FlowParserMixin.parseUpdate (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:11061:21)
    at FlowParserMixin.parseMaybeUnary (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:11041:23)
    at FlowParserMixin.parseMaybeUnaryOrPrivate (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10894:61)
    at FlowParserMixin.parseExprOps (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10899:23)
    at FlowParserMixin.parseMaybeConditional (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10876:23)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10826:21)
    at FlowParserMixin.parseMaybeAssign (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:3579:18)
    at FlowParserMixin.parseExpressionBase (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10779:23)
    at C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10775:39
    at FlowParserMixin.allowInAnd (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:12422:16)
    at FlowParserMixin.parseExpression (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:10775:17)
    at FlowParserMixin.parseReturnStatement (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:13142:28)
    at FlowParserMixin.parseStatementContent (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:12798:21)
    at FlowParserMixin.parseStatementLike (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:12767:17)
    at FlowParserMixin.parseStatementLike (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:2946:24)
    at FlowParserMixin.parseStatementListItem (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:12747:17)
    at FlowParserMixin.parseBlockOrModuleBlockBody (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:13316:61)
    at FlowParserMixin.parseBlockBody (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:13309:10)
    at FlowParserMixin.parseBlock (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:13297:10)
    at FlowParserMixin.parseFunctionBody (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:12101:24)
    at C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:2920:63
    at FlowParserMixin.forwardNoArrowParamsConversionAt (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:3096:16)
    at FlowParserMixin.parseFunctionBody (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:2920:12)
    at FlowParserMixin.parseArrowExpression (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:12076:10)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:11686:12)
    at FlowParserMixin.parseParenAndDistinguishExpression (C:\Users\Le520\Documents\MMU\Property-Maintainance-Service\node_modules\@babel\parser\lib\index.js:3621:18)
ERROR
[eslint] 
src\pages\AnnouncementsPage.jsx
  Line 527:18:  Parsing error: Expected corresponding JSX closing tag for <motion.div>. (527:18)